<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
    <artifactId>dddlib-examples-organisation</artifactId>
    <groupId>org.dddlib.examples.organisation</groupId>
    <version>5.0.0-SNAPSHOT</version>
  </parent>

    <groupId>org.dddlib.examples.organisation</groupId>
    <artifactId>organisation-webapp</artifactId>
    <packaging>war</packaging>

  <name>DDDLib Example - Organization Structure - Webapp</name>

    <properties>
        <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <jetty.port>8688</jetty.port>
    </properties>
    
    <dependencies>
        <!--Compile-->
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>organisation-facade</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>organisation-security</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context-support</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-webmvc</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.shiro</groupId>
            <artifactId>shiro-spring</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.shiro</groupId>
            <artifactId>shiro-quartz</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-web</artifactId>
        </dependency>
        <!--Runtime-->
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>organisation-application</artifactId>
            <version>${project.version}</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>organisation-domain</artifactId>
            <version>${project.version}</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>${project.groupId}</groupId>
            <artifactId>organisation-facade-impl</artifactId>
            <version>${project.version}</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.dayatang.dddlib</groupId>
            <artifactId>dddlib-ioc-spring</artifactId>
            <version>${project.version}</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.dayatang.dddlib</groupId>
            <artifactId>dddlib-persistence-hibernate</artifactId>
            <version>${project.version}</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-dbcp2</artifactId>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-orm</artifactId>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjweaver</artifactId>
        </dependency>
        <dependency>
            <groupId>${jdbc.groupId}</groupId>
            <artifactId>${jdbc.artifactId}</artifactId>
            <version>${jdbc.version}</version>
        </dependency>
        <dependency>
            <groupId>commons-fileupload</groupId>
            <artifactId>commons-fileupload</artifactId>
            <version>1.3.1</version>
        </dependency>

        <!--Provided-->
        <dependency>
            <groupId>javax</groupId>
            <artifactId>javaee-web-api</artifactId>
            <version>7.0</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.codehaus.cargo</groupId>
                    <artifactId>cargo-maven2-plugin</artifactId>
                    <version>1.4.14</version>
                    <configuration>
                        <skip>${maven.skip.test}</skip>
                        <container>
                            <type>embedded</type><!--有installed, embedded 和 remote三种选择-->
                            <containerId>jetty9x</containerId>
                            <zipUrlInstaller>
                                <url>http://download.eclipse.org/jetty/stable-9/dist/jetty-distribution-9.3.0.v20150612.zip</url>
                            </zipUrlInstaller>
                            <output>${project.build.directory}/logs</output>
                            <timeout>300000</timeout><!-- 5 minutes -->
                            <systemProperties>
                                <jboss.server.log.threshold>INFO</jboss.server.log.threshold>
                            </systemProperties>
                            <dependencies>
                            </dependencies>
                        </container>
                        <configuration>
                            <type>standalone</type><!--有standalone, existing和runtime三种选择-->
                            <properties>
                                <cargo.servlet.port>8688</cargo.servlet.port>
                                <cargo.rmi.port>1099</cargo.rmi.port>
                                <cargo.logging>high</cargo.logging>
                                <cargo.jvmargs>
                                    -XX:PermSize=256m
                                    -XX:MaxPermSize=512m
                                    -XX:+UseConcMarkSweepGC
                                    -XX:+CMSPermGenSweepingEnabled
                                    -XX:+CMSClassUnloadingEnabled
                                </cargo.jvmargs>
                            </properties>
                        </configuration>
                        <!--<deployables>-->
                            <!--<deployable>-->
                                <!--<groupId>cn.com.pzhsteel.mes</groupId>-->
                                <!--<artifactId>mes-prototype</artifactId>-->
                                <!--<type>ejb</type>-->
                            <!--</deployable>-->
                        <!--</deployables>-->
                    </configuration>
                    <executions>
                        <execution>
                            <id>start</id>
                            <phase>pre-integration-test</phase>
                            <goals>
                                <goal>start</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>stop</id>
                            <phase>post-integration-test</phase>
                            <goals>
                                <goal>stop</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                    <compilerArguments>
                        <endorseddirs>${endorsed.dir}</endorseddirs>
                    </compilerArguments>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>2.3</version>
                <configuration>
                    <failOnMissingWebXml>false</failOnMissingWebXml>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>2.6</version>
                <executions>
                    <execution>
                        <phase>validate</phase>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${endorsed.dir}</outputDirectory>
                            <silent>true</silent>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>javax</groupId>
                                    <artifactId>javaee-endorsed-api</artifactId>
                                    <version>7.0</version>
                                    <type>jar</type>
                                </artifactItem>
                            </artifactItems>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-maven-plugin</artifactId>
                <version>9.3.0.v20150612</version>
                <configuration>
                    <httpConnector>
                        <port>8888</port>
                        <idleTimeout>60000</idleTimeout>
                    </httpConnector>
                    <scanIntervalSeconds>3</scanIntervalSeconds>
                    <webApp>
                        <contextPath>/</contextPath>
                    </webApp>
                    <jvmArgs>
                        -Xms1024m
                        -Xmx1024m
                        -XX:MaxNewSize=512m
                        -XX:PermSize=256m
                        -XX:MaxPermSize=512m
                        -XX:+UseConcMarkSweepGC
                        -XX:+CMSPermGenSweepingEnabled
                        -XX:+CMSClassUnloadingEnabled
                    </jvmArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
